[gd_scene format=3 uid="uid://dja87uk2pi3ch"]

[ext_resource type="Script" uid="uid://b3kksvgbkcvu6" path="res://scripts/screens/intro_screen.gd" id="1_intro"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.12, 0.12, 0.14, 0.92)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 32

[node name="IntroScreen" type="Control" unique_id=646958143]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_intro")

[node name="Background" type="ColorRect" parent="." unique_id=1653888466]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.025, 0.04, 1)

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=239124210]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer" unique_id=1534999648]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer" unique_id=395309991]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer" unique_id=1330560233]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=1560498388]
layout_mode = 2
text = "wxo-explorer"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=738848341]
layout_mode = 2
text = "watsonx Orchestrate 3D Graph Explorer"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=52826741]
layout_mode = 2

[node name="ServerURLLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=493744118]
layout_mode = 2
text = "Server URL"

[node name="ServerURLInput" type="LineEdit" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=1956358801]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
placeholder_text = "http://localhost:4321"

[node name="AuthModeLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=1234565978]
layout_mode = 2
text = "Authentication"

[node name="AuthModeSelect" type="OptionButton" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=1028882988]
unique_name_in_owner = true
layout_mode = 2

[node name="BearerSection" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=638061827]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="BearerTokenLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/BearerSection" unique_id=220504472]
layout_mode = 2
text = "Bearer Token"

[node name="BearerTokenInput" type="LineEdit" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/BearerSection" unique_id=1621773762]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter your bearer token"
secret = true

[node name="AutoFillButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/BearerSection" unique_id=1813704600]
unique_name_in_owner = true
layout_mode = 2
text = "Auto-fill from local credentials"

[node name="ApiKeySection" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=875949714]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 8

[node name="ApiKeyLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ApiKeySection" unique_id=2121621353]
layout_mode = 2
text = "API Key"

[node name="ApiKeyInput" type="LineEdit" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ApiKeySection" unique_id=1507187775]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter your API key"
secret = true

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=178615997]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=1758780389]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TestButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonContainer" unique_id=1869709789]
unique_name_in_owner = true
layout_mode = 2
text = "Test Connection"

[node name="EnterButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonContainer" unique_id=1574559859]
unique_name_in_owner = true
layout_mode = 2
text = "Enter"

[node name="StatusLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=134331632]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
